--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <h2>About</h2>
             <p>I am Manesh Singh Narania, an attentive, reliable, ambitious, creative, and hardworking individual. With my energetic and joyful personality, I am open-minded and get along well with all kinds of people. I am currently residing at 35 Icy Note Path, Oshawa City, L1L 0L1. You can reach me at +1 647 897 2285 or via email at maneshsinghnarania@gmail.com..</p>
             <h2>Tim Hortons, Port Perry — Host/Cashier</h2>
+            <img src="./image/roadmap.png" alt="Description of the image" width="300" height="200">
             <p>
                 <i>May 2023 - Present</i>
                 <br />
